--- a/Areas/Staff/Views/StaffProfile/StaffProfile.cshtml
+++ b/Areas/Staff/Views/StaffProfile/StaffProfile.cshtml
@@ -93,7 +93,7 @@
                             <label for="date">Date of birth</label>
                             <div class="form remove">
                                 <i class="far fa-calendar-alt icon"></i>
-                                <input type="text" required placeholder="@(currentStaff.date_of_birth.Value.ToString("dd/MM/yyyy"))">
+                                <input type="text" required placeholder="@(currentStaff.date_of_birth.ToString("dd/MM/yyyy"))">
                             </div>
                         </div>
                         <div class="form-group">
@@ -129,7 +129,7 @@
                                             <label for="date">Date of birth</label>
                                             <div class="subform">
                                                 <i class="far fa-calendar-alt sub-icon"></i>
-                                                <input type="text" required placeholder="@(currentStaff?.date_of_birth?.ToString("dd/MM/yyyy"))">
+                                                <input type="text" required placeholder="@(currentStaff?.date_of_birth.ToString("dd/MM/yyyy"))">
                                             </div>
                                         </div>
                                         <div class="subform-group">
