--- a/Staff/css/staff.css
+++ b/Staff/css/staff.css
@@ -173,12 +173,19 @@ html {
     border-bottom: 6px solid #f4f4f4;
   
   }
-  .wrapper{
-  
-    padding: 0;
+    .wrapper{
+      background-color:#f9f9f9;
+      padding-top: 3rem;
+      padding-bottom: 3rem;
   }
-  
-  .search-content-item{
+
+  .wrapper-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+    .search-content-item{
     margin-right: 3rem;
     position: relative;
     display: inline-block;
@@ -187,14 +194,13 @@ html {
   .report-btn{
     position: relative;
     display: inline-block;
-    height: 3rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    height: 3rem;
     border: none;
     background-color:#F26B38; 
     color: white;
     border-radius: 5px;
-    margin-right: 10rem;
   }
   .report-btn:hover{
     cursor: pointer;
@@ -207,6 +213,7 @@ html {
   }
   
   .search-content-item input{
+    outline: none;
     width: 10rem;
     height: 3rem;
     border: none;
@@ -222,13 +229,17 @@ html {
   
   .getdate{
     display: flex;
-    justify-content: left;
-    padding-left: 6rem;
+    width: 60rem;
+    align-items: center;
     margin-top: 3rem;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border-radius: 5px;
-    background-color:#f4f4f4;
+    background-color:#fff;
+    --tw-shadow: 0 25px 50px -12px rgba(0,0,0,.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+ 
   }
   .list-option{
     background-color: white;
@@ -293,10 +304,8 @@ html {
   }
   
   .list-report{
-    margin-top: 4rem;
     margin-bottom: 2rem;
     padding: 2rem;
-    background-color:#f4f4f4;
     font-family: Nunito Sans, sans-serif !important;
     color: #4a4a4a;
     border-radius: 5px;
@@ -321,6 +330,7 @@ html {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
+    font-family: Nunito Sans, sans-serif !important;
   }
   .list{
     list-style: none ;
@@ -366,6 +376,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Nunito Sans, sans-serif !important;
  }
 
  .check-in:hover{
@@ -409,6 +420,94 @@ html {
   background-color: #f58020;
   cursor: pointer;
 }
+
+.qrcode{
+  border-radius: 8px;
+  margin-left: 10rem;
+    margin-right: 10rem;
+    background: #fff;
+    --tw-shadow: 0 25px 50px -12px rgba(0,0,0,.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.qr-reader{
+  border: none;
+}
   
+/*input-box */
+.input-box{
+  position: relative;
+  height: 55px;
+  max-width: 55px;
+  width: 100%;
+  margin: 0 40px;
+  border-radius: 6px;
+  background-color: #fff;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.input-box.open{
+  max-width: 350px;
+}
+input{
+  position: relative;
+  outline: none;
+  border: none;
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
+  background-color: #fff;
+  font-family: Nunito Sans, sans-serif !important;
+}
+.input-box.open{
+  padding: 0 15px 0 65px;
+}
+.icon{
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  width: 60px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+}
+.search-icon,
+.close-icon{
+  position: absolute;
+  top: 50%;
+  font-size: 30px;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.search-icon{
+  color:#f58020;
+  transform: translateY(-50%) rotate(90deg);
+}
+.input-box.open .search-icon{
+  transform: translateY(-50%) rotate(0);
+}
+.close-icon{
+  right: -45px;
+  color: #f58028;
+  padding: 5px;
+  margin-right: 1rem;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-50%);
+}
+.input-box.open .close-icon{
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(-50%) rotate(180deg);
+}
+.search-icon:hover{
+  cursor: pointer;
+}
 
-
+.close-icon:hover{
+  cursor: pointer;
+}
